<resources>
    <string name="app_name">GPMovil</string>
    <string name="title_activity_especialistas">Especialistas</string>
    <string name="title_activity_turnos">Turnos</string>
    <string name="title_activity_settings">Configuracion</string>
    <string name="coberturas">Coberturas</string>
    <string name="titular">Nombre titular</string>
    <string name="nrosocio">Nro de socio/afiliado</string>
    <string name="vigencia">Vigencia hasta</string>
    <string name="direccion">Dirección</string>
    <string name="calleNroLoc">Calle Nro, Localidad</string>
    <string name="pisoDepto">Piso Departamento</string>
    <string name="wsurl">URL del web service</string>
    <string name="defaultwsurl">http://192.168.0.105:8080/GPAdm7/</string>
    <string name="localidad">Localidad</string>
    <string name="especialidad">Especialidad</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Cobertura</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>No seleccionado / Cargando</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_sign">Inicio de sesión</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">138068375056-udb8e6fohmc6qefkmuivqr497nq6jgh6.apps.googleusercontent.com</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="pref_mailEnabled">Notificar por Mail</string>
    <string name="pref_popupEnabled">Notificar por Popup</string>
    <string name="pref_hours">horas</string>
    <string name="pref_minutes">minutos</string>

    <string name="service_not_available">Servicio no disponible</string>
    <string name="invalid_lat_long_used">Latitud longitud inválidos</string>
    <string name="invalid_address_used">Dirección inválida</string>
    <string name="no_address_found">Dirección no encontrada</string>
    <string name="address_found">Dirección encontrada</string>
    <string name="title_activity_test_geo">TestGeoActivity</string>
    <string name="no_geocoder_available">Geocoder no disponible</string>
    <string name="fetch_address">Fetch address</string>
    <string name="fetch_location">Fetch location</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_address_data_provided">No address data provided</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="title_activity_direcciones">Direcciones</string>
    <string name="title_activity_direccion">Dirección</string>
    <string name="title_activity_test">TestActivity</string>


</resources>
