<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="cobertura"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/coberturas" />

    <EditTextPreference
        android:key="titular"
        android:capitalize="words"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/titular" />

    <EditTextPreference
        android:key="nrosocio"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/nrosocio" />

    <EditTextPreference
        android:key="vigencia"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/vigencia" />

</PreferenceScreen>
